fix layout on small screen

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -19,6 +19,12 @@ li.video.selected{
   background: blue !important;
 }
 
+.filter-container {
+  /* left: 50%;
+  position: absolute;
+  transform: translateX(-50%); */
+}
+
 
 li.video:hover{
   background-color: lightblue;
