--- a/app/src/Components/FilterFileEditor/style.css
+++ b/app/src/Components/FilterFileEditor/style.css
@@ -1,3 +1,13 @@
+.editor-container{
+    margin-top: 40px;
+}
+.table-container{
+    width: fit-content;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
