--- a/app/src/Components/Player/style.css
+++ b/app/src/Components/Player/style.css
@@ -8,3 +8,36 @@ p.controltime {
     position: absolute;
     color: white;
 }
+
+.playercontainer{
+    margin: 0 auto;
+    width: 80%;
+}
+
+@media only screen and (max-width: 1024px) {
+    .playercontainer{
+        width: 100%;
+    }
+}
+
+.player{
+    position: relative; 
+    left: 0; 
+    top: 0;
+    width: 100%; 
+    height: 100%;
+}
+
+.subtitlecontainer{
+    position: absolute;
+    bottom: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+
+.controlscontainer{
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+} 
